# variant-verse

./: .gitignore  info.md  variant-verse.code-workspace
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
mutation-generator-backend/: pyproject.toml  requirements.txt
mutation-generator-backend/backend/app/: mondo.py
mutation-generator-backend/clinvar_setup/: asynchelper.py  db.py  nonstandard_significance_terms.tsv
mutation-generator-backend/src/: backend_server.py
mutation-generator-backend/src/api/: main.py
mutation-generator-backend/src/models/: mutation.py
