[project]
name = "mutation-generator-backend"
version = "0.1.0"
description = "A bioinformatics tool to search, analyze, and classify genetic variants by gene name, pulling from ClinVar clinical interpretation data and mapping diseases to the MONDO disease ontology."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.9",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "anyio==3.7.1",
    "asynchelper==0.1.4",
    "attrs==24.2.0",
    "beautifulsoup4==4.12.3",
    "biopython==1.84",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "elementpath>=4.7.0",
    "et-xmlfile==2.0.0",
    "fastapi==0.104.1",
    "frozenlist==1.5.0",
    "h11==0.14.0",
    "idna==3.10",
    "lxml>=5.3.0",
    "multidict==6.1.0",
    "numpy==2.1.3",
    "openpyxl==3.1.5",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "pandas==2.2.3",
    "propcache==0.2.1",
    "pycparser==2.22",
    "pydantic==2.4.2",
    "pydantic-core==2.10.1",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "requests==2.32.3",
    "selenium==4.26.1",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "starlette==0.27.0",
    "trio==0.27.0",
    "trio-websocket==0.11.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "uvicorn==0.24.0",
    "webdriver-manager==4.0.2",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
    "xlrd==2.0.1",
    "xlsxwriter==3.2.0",
    "yarl==1.18.3",
]
